finished-letter.html

--- a/open-letter.html
+++ b/open-letter.html
@@ -4,14 +4,10 @@
         <title>The Adventures of Link</title>
     </head>
     <body>
-        <h1>You take the letter out of the book.</h1>
+        <h1>You open the letter and see that there are </h1>
         <hr>
-        <p>
-        <a href="./open-letter.html">Open the letter.</a>
-        </p>
-        <p>
-        <a href="./book.html">Inspect the book.</a>
-        </p>
+        <p></p>
+        <a href=""></a>
         <hr>
         <p><a href="./index.html">Start the story over.</a></p>
         <p><a href="https://github.com/abbreviatedman/the-adventures-of-link" target="_blank">See the code that powers this app.</a></p>
