--- a/open-letter.html
+++ b/open-letter.html
@@ -4,10 +4,12 @@
         <title>The Adventures of Link</title>
     </head>
     <body>
-        <h1>You open the letter and see that there are </h1>
+        <h1>You open the letter and see that there are a set of keys.</h1>
         <hr>
-        <p></p>
-        <a href=""></a>
+        <p>
+        <a href="take-keys-librarian.html">Take keys to the librarian.</a>
+        </p>
+        <a href="explore.html">Explore library for locked doors.</a>
         <hr>
         <p><a href="./index.html">Start the story over.</a></p>
         <p><a href="https://github.com/abbreviatedman/the-adventures-of-link" target="_blank">See the code that powers this app.</a></p>
