finished book.html

--- a/open-letter.html
+++ b/open-letter.html
@@ -7,9 +7,9 @@
         <h1>You open the letter and see that there are a set of keys.</h1>
         <hr>
         <p>
-        <a href="take-keys-librarian.html">Take keys to the librarian.</a>
+        <a href="./take-keys-librarian.html">Take keys to the librarian.</a>
         </p>
-        <a href="explore.html">Explore library for locked doors.</a>
+        <a href="./explore.html">Explore library for locked doors.</a>
         <hr>
         <p><a href="./index.html">Start the story over.</a></p>
         <p><a href="https://github.com/abbreviatedman/the-adventures-of-link" target="_blank">See the code that powers this app.</a></p>
