finished-further-inspection.html

--- a/further-inspection.html
+++ b/further-inspection.html
@@ -6,18 +6,14 @@
     <body>
         <h1>The Adventures of Link</h1>
         <hr>
-        <p>After inspecting the book, you realize the pages are completely blank.</p>
+        <p>Upon even further inspection of the book, you notice what looks like Latin engraved on the inside of the last page of the book.</p>
         <p>
-            <a href = "./letter.html">Forget it.</a>
-        </p>
-        <p>
-            <a href ="./further-inspection.html">Inspect the book even further.</a>
+            <a href = "./crumbles.html">Read the words aloud.</a>
         </p>
         <hr>
         <p>
             <a href="./index.html">Start the story over.</a>
         </p>
-        
         <a href="https://github.com/abbreviatedman/the-adventures-of-link" target="_blank">See the code that powers this app.</a>
     </body>
 </html>
