--- a/letter.html
+++ b/letter.html
@@ -4,16 +4,21 @@
         <title>The Adventures of Link</title>
     </head>
     <body>
-        <h1>You take the letter out of the book.</h1>
+        <h1>The Adventures of Link</h1>
         <hr>
+        <p>You take the letter out of the book.</p>
         <p>
-        <a href="./open-letter.html">Open the letter.</a>
+            <a href="./open-letter.html">Open the letter.</a>
         </p>
         <p>
-        <a href="./book.html">Inspect the book.</a>
+            <a href="./book.html">Inspect the book.</a>
         </p>
         <hr>
-        <p><a href="./index.html">Start the story over.</a></p>
-        <p><a href="https://github.com/abbreviatedman/the-adventures-of-link" target="_blank">See the code that powers this app.</a></p>
+        <p>
+            <a href="./index.html">Start the story over.</a>
+        </p>
+        <p>
+            <a href="https://github.com/abbreviatedman/the-adventures-of-link" target="_blank">See the code that powers this app.</a>
+        </p>
     </body>
 </html>
