--- a/open-letter.html
+++ b/open-letter.html
@@ -4,14 +4,19 @@
         <title>The Adventures of Link</title>
     </head>
     <body>
-        <h1>You open the letter and see that there are a set of keys.</h1>
+        <h1>The Adventures of Link</h1>
+        <hr>
+        <p>You open the letter and see that there are a set of keys.</p>
+        <p>
+            <a href="./take-keys-librarian.html">Take keys to the librarian.</a>
+        </p>
+            <a href="./explore.html">Explore library for locked doors.</a>
         <hr>
         <p>
-        <a href="./take-keys-librarian.html">Take keys to the librarian.</a>
+            <a href="./index.html">Start the story over.</a>
         </p>
-        <a href="./explore.html">Explore library for locked doors.</a>
-        <hr>
-        <p><a href="./index.html">Start the story over.</a></p>
-        <p><a href="https://github.com/abbreviatedman/the-adventures-of-link" target="_blank">See the code that powers this app.</a></p>
+        <p>
+            <a href="https://github.com/abbreviatedman/the-adventures-of-link" target="_blank">See the code that powers this app.</a>
+        </p>
     </body>
 </html>
