finished-closed-door

--- a/closed-door.html
+++ b/closed-door.html
@@ -6,10 +6,7 @@
     <body>
         <h1>The Adventures of Link</h1>
         <hr>
-        <p>After spending sometime exploring the library, you come across a heavy metal door towards the back of the main room that is locked tight.</p>
-        <p>
-            <a href = "./open-door.html">Use the keys on the door.</a>
-        </p>
+        <p>As soon as you open the door, you hear a mechanism shift and a trap door opens up beneath you! You don't remember how deep it was. (You died!)</p>
         <hr>
         <p>
             <a href="./index.html">Start the story over.</a>
