--- a/open-letter.html
+++ b/open-letter.html
@@ -6,7 +6,7 @@
     <body>
         <h1>The Adventures of Link</h1>
         <hr>
-        <p>You open the letter and see that there are a set of keys.</p>
+        <p>You open the letter and see that there are a set of old keys.</p>
         <p>
             <a href="./take-keys-librarian.html">Take keys to the librarian.</a>
         </p>
